Updated text, jump links and about.html.

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 									<div class="quick-start-content">
 										<h3 class="quick-start-title">Watch Livestreams</h3>
 										<p class="align-center">News · Updates · Contests · Giveaways</p> <button class="button"><a
-												href="/pages/livestream.html#about-contests">Learn More</a></button>
+												href="/pages/livestream.html#livestream-title">Learn More</a></button>
 									</div>
 								</article>
 							</div>
