--- a/pages/about.html
+++ b/pages/about.html
@@ -171,12 +171,12 @@
 							<h3 style="text-align: left;">Benefit from Discovery</h3>
 							<p>Blockchain technology is rapidly gaining traction globally, with
 								over 300 million people using
-								it worldwide <a href="https://www.demandsage.com/blockchain-statistics/">1</a>. The
+								it worldwide<a href="https://www.demandsage.com/blockchain-statistics/">1</a>. The
 								blockchain market is predicted
 								to reach $162.84 billion by 2027, highlighting its growing significance. Additionally,
 								Bitcoin adoption has seen
 								substantial growth, with over 41 million BTC addresses holding at least $1 worth of
-								Bitcoin <a href="https://www.tastycrypto.com/blog/bitcoin-adoption/">2</a>.</p>
+								Bitcoin<a href="https://www.tastycrypto.com/blog/bitcoin-adoption/">2</a>.</p>
 				
 							<p>By partnering with leading Web3 software developers, our company can subtly introduce people to the
 								nuances of
@@ -231,24 +231,26 @@
 						</thead>
 						<tbody>
 							<tr>
+								<td>Follow on <br />
+									<b>𝕏</b>
+								</td>
+								<td><a href="https://x.com/OFiDCrypt">@OFiDCrypt</a><br />
+									<a href="https://x.com/OFiDKid">@OFiDKid</a></td>
+							</tr>
+							<tr>
+								<td>Join on <br />
+									<b>Telegram</b>
+								</td>
+								<td>Channel & Group<br />
+								<a href="https://t.me/OFiDBall">@OFiDBall</a></td>
+							</tr>
+							<tr>
 								<td>Join on <b>Flipchat</b> <br />
 									Room <a href="https://app.flipchat.xyz/room/350"><b>#350</b></a></td>
 								<td><a href="https://apps.apple.com/ca/app/flipchat-messenger/id6738328834">Get for iOS</a><br />
 									<a href="https://play.google.com/store/apps/details?id=xyz.flipchat.app&pcampaignid=web_share">Get
 										for Android</a>
 								</td>
-							</tr>
-							<tr>
-								<td>Join on <br />
-									<b>Telegram</b>
-								</td>
-								<td><a href="https://t.me/OFiDBall">@OFiDBall</a></td>
-							</tr>
-							<tr>
-								<td>Follow on <br />
-									<b>𝕏</b>
-								</td>
-								<td><a href="https://x.com/OFiDCrypt">@OFiDCrypt</a></td>
 							</tr>
 						</tbody>
 					</table>
@@ -263,9 +265,11 @@
 										alt="eXP Brand Card COlour Splash"></span>
 							</a>
 							<h3 style="text-align: left;">Your Platform, Your Choice</h3>
-							<p>Join like-minded individuals within the OFiDCrypt Community on
-								Flipchat, Telegram and 𝕏. Participate in promotions and live
-								events with e𝕏PB Bouncy Ball & Phantom Wallet, creating shared experiences together.</p>
+							<p>Join like-minded individuals within the OFiDCrypt Community on 𝕏,
+								Telegram, Flipchat and more! Participate in promotions and live
+								events with e𝕏PB Bouncy Ball & Your Solana Wallet.</p>
+								<p>We are <b>@OFiDCrypt</b> or <b>@OFiDKid</b> and on all verified listed platforms. We are connected with WhatsApp on
+									Google. Become part of our community and the web3 movement by joining our growing social channels!</p>
 						</div>
 					</div>
 				</article>
