--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -175,7 +175,7 @@
 				<!-- Section Heading -->
 					<section class="event-links">
 						<header class="major">
-							<h1>𝕏 Livestream</h1>
+							<h1 id="livestream-title">𝕏 Livestream</h1>
 							<!-- Section Description -->
 							<p class="align-center">ℹ️ <a href="https://x.com/i/broadcasts/1ZkJzRZMWvNJv">Aired on 𝕏 Jan-29-2025, 3:00 PM PST</a></p>
 							<p class="align-center">
@@ -244,14 +244,17 @@
 								<section class="posts">
 									<article>
 										<header class="large-href">
-											<span class="date">EXP-001 e𝕏P WEB3™</span>
+											<span class="date">EXP-001 e𝕏P WEB3™<br />
+											<a href="#event-1-desc">More Details</a></span>
+
 											<h1><a href="#table-next-event">e𝕏PB<br />
 													Bouncy Ball</a></h1>
 										</header>
 										<a href="#" class="image fit"><img src="../assets/images/expb-001.png" alt="Art Thumbnail"></a>
-										<p>Join us to learn more about what we do! Explore Web3 apps for business and social utility, and get rewarded with e𝕏P
+										<p id="event-1-desc">Join us to learn more about what we do! Explore Web3 apps for business and social utility, and get rewarded with e𝕏P
 											Web3™. Participate in our contests, and earn rewards by trying out Web3 products from leading partners. Don't miss
 											the physical distribution of e𝕏PB-themed OFiD Stress Balls—perfect for relieving stress, coming soon!</p>
+											
 										
 											<ul class="actions special">
 												<li><a href="livestream.html#latest-event" class="button">Watch Event</a></li>
@@ -270,12 +273,14 @@
 								<section class="posts">
 									<article>
 										<header class="large-href">
-											<span class="date">PDA-001 Perk Digital Art</span>
-											<h1><a href="#table-next-event">Perk<br />
+											<span class="date">PDA-001 Perk Digital Art<br />
+											<a href="#event-2-desc">More Details</a></span>
+
+											<h1><a href="#table-event-2">Perk<br />
 													Digital Art</a></h1>
 										</header>
 										<a href="#" class="image fit"><img src="../assets/images/picgif01.gif" alt="Featured Art Thumbnail"></a>
-										<p>Announced in late September, the event invites participants to purchase
+										<p id="event-2-desc">Announced in late September, the event invites participants to purchase
 											featured digital art for as little as $0.25 USD of Kin. Simply visit the store by
 											clicking the button below, make your purchase and receive a free entry for the live draw!
 											You can join the upcoming 𝕏 Livestream where the winners will be chosen. The event
