Reordered tabs and started to move Kin Community to Partners - Community to become Our Community.

--- a/pages/about.html
+++ b/pages/about.html
@@ -108,10 +108,10 @@
 		<nav id="nav">
 			<ul class="links">
 				<li><a href="../index.html">Home</a></li>
-				<li><a href="vipwithcode.html">Code Lounge</a></li>
 				<li><a href="../community.html">Community</a></li>
 				<li><a href="livestream.html">Live Events</a></li>
 				<li><a href="affiliate.html">Partners</a></li>
+				<li><a href="vipwithcode.html">Code Lounge</a></li>
 				<li class="active"><a href="about.html">About Us</a></li>
 			</ul>
 			<ul class="icons">
@@ -157,7 +157,7 @@
 					<h1>A Web3<br />
 						Movement</h1>
 					<p>We are a registered Canadian small business, committed to uniting people through experiences and
-						education, as we transition into the era of Web3.</p>
+						information, as we transition into the era of Web3.</p>
 				</header>
 
 				<!-- Why Web3: About Statistics -->
