--- a/pages/affiliate.html
+++ b/pages/affiliate.html
@@ -104,10 +104,10 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="../index.html">Home</a></li>
-							<li><a href="vipwithcode.html">Code Lounge</a></li>
 							<li><a href="../community.html">Community</a></li>
 							<li><a href="livestream.html">Live Events</a></li>
 							<li class="active"><a href="affiliate.html">Partners</a></li>
+							<li><a href="vipwithcode.html">Code Lounge</a></li>
 							<li><a href="about.html">About Us</a></li>
 						</ul>
 						<ul class="icons">
@@ -152,10 +152,12 @@
                 <section class="partner-section">
                     <header>
                         <!-- Partner Name -->
-                        <h2>e𝕏P Web3™</h2>
-						<p>Hvr instantly impressed us with its groundbreaking concept: Comment on, share, and tag people on any page across the
-							internet! This innovation unleashes boundless opportunities for discussion all over the web, enabling you to form
-							new connections and share your thoughts seamlessly as you browse.</p>
+						<h2>e𝕏P Web3™</h2>
+						<p>Affiliate partnerships allow members to discover products organically from trusted sources such as blogs, social
+							media, and videos. These partners share genuine insights, building trust and enhancing the web3 experience.
+							We can simplify decision-making with valuable information, aligning with modern consumer
+							behavior that values peer recommendations. This approach provides personalized marketing tailored to customer
+							interests, making their browsing experience more enjoyable and satisfying.</p>
                     </header>
 
                     <!-- Product 1 -->
@@ -166,7 +168,9 @@
 									<span class="image left"><img src="../assets/images/hvr-logo03.png" alt="Hvr App Colorful Logo"></span>
 								</a>								
                                 <h3 style="text-align: left;">Hvr Browser | Where Sites Are Social</h3>
-                                <p>"Harnessing affiliate power, businesses can tap into diverse audiences through trusted partners. These partners promote products organically, sharing through blogs, social media, and videos, offering genuine insights. This authenticity builds consumer trust, leading to increased engagement and sales. Affiliates, often experts in their niche, educate their followers, simplifying the choice to purchase. This collaboration not only boosts brand visibility but also aligns with modern consumer behavior, valuing peer recommendations. Through strategic partnerships, affiliates help brands grow, providing personalized marketing at a fraction of traditional advertising costs, effectively turning followers into customers with every shared link or review."</p>
+                                <p>Hvr instantly impressed us with its groundbreaking concept: Comment on, share, and tag people on any page across the
+									internet! This innovation unleashes boundless opportunities for discussion all over the web, enabling you to form
+									new connections and share your thoughts seamlessly as you browse.</p>
                             </div>
                         </div>
                     </article>
@@ -175,9 +179,17 @@
                     <article class="product-section">
                         <div class="product-wrapper">
                             <div class="product-content">
-                                <span class="image right"><img src="../assets/images/logokin01.jpg" alt="Kin On Solana Logo Image"></span>
-                                <h3 style="text-align: right;">Product Name Here</h3>
-                                <p>"In return, affiliates receive a commission, incentivizing quality promotion. This model thrives on performance, ensuring that only the most compelling and relevant promotions reach the audience. Effective affiliate marketing relies on a deep understanding of the product and the audience, allowing for targeted marketing that feels more like a friend's recommendation than an advertisement. Over time, this relationship fosters loyalty, not just to the product but to the affiliate as well, creating a cycle of trust and commerce. Brands benefit from this organic growth, often seeing higher conversion rates due to the personal touch affiliates add. Furthermore, affiliates can provide valuable feedback, helping brands improve their offerings. This partnership extends beyond mere transactions, cultivating a community around shared values and interests, where everyone involved gains value."</p>
+								<a href="../community.html">
+                                	<span class="image right"><img src="../assets/images/logokin02.jpg" alt="Kin On Solana Logo Image"></span>
+								</a>
+                                <h3 style="text-align: right;">The Kin Community</h3>
+                                <p>Kin is a cryptocurrency that follows Satoshi Nakamoto's vision of a direct,
+									peer-to-peer payment system. Unlike traditional money where banks or services are
+									the go-between, Kin allows people to send and receive payments directly from each
+									other. It's designed to be user-friendly, making transactions as simple as sending a
+									message, but with the added security of blockchain technology. With Kin, you can pay
+									for services, tip content creators, or just transfer money to friends without any
+									middleman. Kin was introduced in 2017 as an ICO (Initial Coin Offering) within Kik Messenger./p>
                             </div>
                         </div>
                     </article>
