--- a/index.html
+++ b/index.html
@@ -181,12 +181,9 @@
 							<header class="major">
 								<span class="date">OFiDCrypt Services</span>
 								<h1>Our <br />Mission</h1>
-								<p>Our mission is to unite, educate, and inspire as a leading brand and movement in the Web3 space. Through innovative
-									applications, wallets, and partnerships with top developers, we seamlessly introduce people to blockchain
-									technology. Join us in exploring new opportunities and shaping the future of digital experiences.</p>
-
-								<p><b>To jump straight in, we’ve provided quick links below</b>
+								<p>Our mission is to be the leading identity and movement accelerating mainstream Web3 adoption, unifying people and applications through a simple digital wallet hub and partner platforms. We empower peer-to-peer swaps, protection and earning of assets, envisioning a self-sustaining autonomous ecosystem, guided by the people.</p>
 								
+								<p><b>To jump straight in, we’ve provided quick links below</b>
 									<p>We recommend reviewing our <a href="/index.html#Guide">Quick Start Guide</a> to learn about Solana cryptocurrency,
 										the Solana blockchain it operates on, and other Solana-supported tokens like e𝕏PB. Discover how cryptocurrency,
 										blockchain, and wallets work together, and the benefits they offer.</p>
