--- a/pages/affiliate.html
+++ b/pages/affiliate.html
@@ -189,7 +189,7 @@
 									other. It's designed to be user-friendly, making transactions as simple as sending a
 									message, but with the added security of blockchain technology. With Kin, you can pay
 									for services, tip content creators, or just transfer money to friends without any
-									middleman. Kin was introduced in 2017 as an ICO (Initial Coin Offering) within Kik Messenger./p>
+									middleman. Kin was introduced in 2017 as an ICO (Initial Coin Offering) within Kik Messenger.</p>
                             </div>
                         </div>
                     </article>
