Started making layout changes and set the docs page with table of contents. Experiences will move to eXP Web3 tab.

--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Home</a></li>
+							<li><a href="/index.html#expb-get">e𝕏P Web3™</a></li>
 							<li><a href="/community.html">Community</a></li>
 							<li><a href="pages/livestream.html">Live Events</a></li>
-							<li><a href="pages/affiliate.html">Partners</a></li>
-							<li><a href="pages/vipwithcode.html">Code Lounge</a></li>
+							<li><a href="#">The OFiD Kid</a></li>
 							<li><a href="pages/about.html">About Us</a></li>
 						</ul>
 						<ul class="icons">
@@ -204,32 +204,32 @@
 												href="https://phantom.com/download">Download</a></button>
 									</div>
 								</article>
+								<article class="quick-start-item"> <span class="image left" id="expb-get"><img src="/assets/images/expb-002-1x1.jpg"
+											alt="eXPB Icon"></span>
+											<div class="quick-start-content">
+												<h3 class="quick-start-title">Get e𝕏PB</h3>
+												<p class="align-center">Bouncy Balls · On Solana <br />
+													In Your Wallet</p>
+												<button class="button"><a href="https://dexscreener.com/solana/4Kf9mFXh7mksX3vSV8Cy2xRW8iRKwHgz3cqCGPk58XkH">Go to Merchant</a></button>
+											</div>
+								</article>
 								<article class="quick-start-item"> <span class="image left"><img src="/assets/images/bg-articles-lowres-square.png"
-											alt="Learn Icon"></span>
-									<div class="quick-start-content">
-										<h3 class="quick-start-title">Learn about Crypto</h3>
-										<p class="align-center">Fundamentals · Basics · Tips · Security</p> <button class="button"><a
-												href="/index.html#pagination-controls-top">Go to Articles</a></button>
-									</div>
-								</article>
-								<article class="quick-start-item"> <span class="image left"><img src="/assets/images/x-livestream.png"
-											alt="Event Icon"></span>
-									<div class="quick-start-content">
-										<h3 class="quick-start-title">Watch Livestreams</h3>
-										<p class="align-center">News · Updates · Contests · Giveaways</p> <button class="button"><a
-												href="/pages/livestream.html#livestream-title">Learn More</a></button>
-									</div>
-								</article>
+									alt="Learn Icon"></span>
+							<div class="quick-start-content">
+								<h3 class="quick-start-title">Learn about Crypto</h3>
+								<p class="align-center">Fundamentals · Basics · Tips · Security</p> <button class="button"><a
+										href="/index.html#pagination-controls-top">Go to Articles</a></button>
+							</div>
+						</article>
 							</div>
 
 							<!-- Quick Start: Featured -->
-							<article class="quick-start-item quick-start-featured" id="expb-get">
-								<span class="image left"><img src="/assets/images/expb-002-1x1.jpg" alt="Featured Icon"></span>
+							<article class="quick-start-item quick-start-featured">
+								<span class="image left"><img src="/assets/images/x-livestream.png" alt="Featured Icon"></span>
 								<div class="quick-start-content">
-									<h3 class="quick-start-title">Get e𝕏PB</h3>
-									<p class="align-center">Bouncy Balls · On Solana <br />
-										In Your Wallet</p>
-									<button class="button"><a href="https://dexscreener.com/solana/4Kf9mFXh7mksX3vSV8Cy2xRW8iRKwHgz3cqCGPk58XkH">Go to Merchant</a></button>
+									<h3 class="quick-start-title">Watch Livestreams</h3>
+									<p class="align-center">News · Updates · Contests · Giveaways</p> <button class="button"><a
+											href="/pages/livestream.html#livestream-title">Learn More</a></button>
 								</div>
 							</article>
 						</section>
@@ -423,7 +423,11 @@
 
 				<!-- Copyright -->
 				<div id="copyright">
-					<ul><li><a href="/pages/affiliate.html">Affiliate</a></li><li><a href="/community.html">Community</a></li> <li><a href="/pages/livestream.html">Live Events</a></li> <li><a href="/pages/about.html">About</a></li></ul>
+				<ul><li><a href="/pages/affiliate.html">Affiliate</a></li>
+					<li><a href="/community.html">Community</a></li>
+					<li><a href="/docs/docs.html">Docs</a></li>
+					<li><a href="/pages/about.html">About</a></li>
+				</ul>
 					<ul><li>&copy; OF<span class="i">i</span>DCrypt e𝕏P Web3™ 2025</li></ul>
 					<ul><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 				</div>
