--- a/cashlinks.html
+++ b/cashlinks.html
@@ -267,7 +267,7 @@
 				<ul>
 					<li><a href="/pages/affiliate.html">Affiliate</a></li>
 					<li><a href="/community.html">Community</a></li>
-					<li><a href="/pages/livestream.html">Live Events</a></li>
+					<li><a href="/docs/docs.html">Docs</a></li>
 					<li><a href="/pages/about.html">About</a></li>
 				</ul>
 				<ul>
