--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -392,7 +392,7 @@
 					<ul>
 						<li><a href="affiliate.html">Affiliate</a></li>
 						<li><a href="../community.html">Community</a></li>
-						<li><a href="livestream.html">Live Events</a></li>
+						<li><a href="../docs/docs.html">Docs</a></li>
 						<li><a href="about.html">About</a></li>
 					</ul>
 					<ul>
