--- a/pages/vipwithcode.html
+++ b/pages/vipwithcode.html
@@ -104,11 +104,8 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="../index.html">Home</a></li>
-							<li><a href="../community.html">Community</a></li>
-							<li><a href="livestream.html">Live Events</a></li>
-							<li><a href="affiliate.html">Partners</a></li>
+							<li><a href="#">e𝕏P Web3™</a></li>
 							<li class="active"><a href="vipwithcode.html">Code Lounge</a></li>
-							<li><a href="about.html">About Us</a></li>
 						</ul>
 						<ul class="icons">
 							<li>
@@ -300,7 +297,10 @@
 
 				<!-- Copyright -->
 				<div id="copyright">
-					<ul><li><a href="affiliate.html">Affiliate</a></li><li><a href="../community.html">Community</a></li><li><a href="livestream.html">Live Events</a></li><li><a href="about.html">About</a></li></ul>
+					<ul><li><a href="affiliate.html">Affiliate</a></li>
+						<li><a href="../community.html">Community</a></li>
+						<li><a href="../docs/docs.html">Docs</a></li>
+						<li><a href="about.html">About</a></li></ul>
 					<ul><li>&copy; OF<span class="i">i</span>DCrypt e𝕏P Web3™ 2025</li></ul>
 					<ul><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
