--- a/index.html
+++ b/index.html
@@ -183,7 +183,14 @@
 								<h1>Our <br />Mission</h1>
 								<p>Our mission is to be the leading identity and movement accelerating mainstream Web3 adoption, unifying people and applications through a simple digital wallet hub and partner platforms. We empower peer-to-peer swaps, protection and earning of assets, envisioning a self-sustaining autonomous ecosystem, guided by the people.</p>
 								
-								<p><b>To jump straight in, we’ve provided quick links below</b>
+								<div class="image button-image">
+									<a href="/docs/docs.html" target="_blank">
+										<img src="../assets/images/button-see-the-docs.png" alt="Login Button Image for Code Wallet" />
+									</a>
+								</div>
+
+								<p><b>You can get started with a free wallet, buy Solana and swap for e𝕏PB in minutes! See this <a href="#">video guide</a>
+									for help.</b>
 									<p>We recommend reviewing our <a href="/index.html#Guide">Quick Start Guide</a> to learn about Solana cryptocurrency,
 										the Solana blockchain it operates on, and other Solana-supported tokens like e𝕏PB. Discover how cryptocurrency,
 										blockchain, and wallets work together, and the benefits they offer.</p>
