Updated inforamtion on index.html.

--- a/index.html
+++ b/index.html
@@ -191,10 +191,7 @@
 
 								<p><b>You can get started with a free wallet, buy Solana and swap for e𝕏PB in minutes! See this <a href="#">video guide</a>
 									for help.</b>
-									<p>We recommend reviewing our <a href="/index.html#Guide">Quick Start Guide</a> to learn about Solana cryptocurrency,
-										the Solana blockchain it operates on, and other Solana-supported tokens like e𝕏PB. Discover how cryptocurrency,
-										blockchain, and wallets work together, and the benefits they offer.</p>
-									
+									<p>We recommend reviewing our <a href="/index.html#Guide">Quick Start Guide</a> to learn about Solana.</p>
 								</header>
 					
 						<!-- Quick Start Section -->
@@ -244,6 +241,10 @@
 							<header id="Guide">
 								<h2>Guide</h2>
 								<!-- Section Description -->
+								<p>Solana cryptocurrency operates on the <b>Solana Public Ledger</b>, similar to how cash transactions are processed on Visa or
+								Mastercard networks. With just a click, you can swap for other tokens also running on Solana's network, like e𝕏PB!
+								The more people buy, the more valuable the asset becomes.</p>
+
 								<p>For blog posts and articles about getting started with OFiDCrypt, visit our <a
 										href="https://ofidcrypt.ca/readme-welcome">Companion Site</a>, hosted by our site partner, HVR Social Browser.
 								</p>
