Fixed spelliong and added contect to docs.

--- a/index.html
+++ b/index.html
@@ -181,16 +181,19 @@
 							<header class="major">
 								<span class="date">OFiDCrypt Services</span>
 								<h1>Our <br />Mission</h1>
-								<p>Our mission is to be the leading identity and movement accelerating mainstream Web3 adoption, unifying people and applications through a simple digital wallet hub and partner platforms. We empower peer-to-peer swaps, protection and earning of assets, envisioning a self-sustaining autonomous ecosystem, guided by the people.</p>
-								
-								<div class="image button-image">
-									<a href="/docs/docs.html" target="_blank">
-										<img src="../assets/images/button-see-the-docs.png" alt="Login Button Image for Code Wallet" />
-									</a>
-								</div>
+								<p>Our mission is to be the leading identity and movement accelerating mainstream Web3 adoption, unifying people and
+									applications through a simple digital wallet hub and partner platforms. We empower peer-to-peer swaps, protection
+									and earning of assets, envisioning a self-sustaining autonomous ecosystem, guided by the people.</p>
 
 								<p><b>You can get started with a free wallet, buy Solana and swap for e𝕏PB in minutes! See this <a href="#">video guide</a>
-									for help.</b>
+									for help.</b> For technical information about the OFiDCrypt & e𝕏P ecosystem project, click below.</p>
+
+									<div class="image button-image">
+										<a href="/docs/docs.html" target="_blank">
+											<img src="../assets/images/button-see-the-docs.png" alt="Login Button Image for Code Wallet" />
+										</a>
+									</div>
+
 									<p>We recommend reviewing our <a href="/index.html#Guide">Quick Start Guide</a> to learn about Solana.</p>
 								</header>
 					
@@ -245,7 +248,7 @@
 								Mastercard networks. With just a click, you can swap for other tokens also running on Solana's network, like e𝕏PB!
 								The more people buy, the more valuable the asset becomes.</p>
 
-								<p>For blog posts and articles about getting started with OFiDCrypt, visit our <a
+								<p class="align-center">For blog posts and articles about getting started with OFiDCrypt, visit our <a
 										href="https://ofidcrypt.ca/readme-welcome">Companion Site</a>, hosted by our site partner, HVR Social Browser.
 								</p>
 								</header>
