--- a/index.html
+++ b/index.html
@@ -181,21 +181,23 @@
 							<header class="major">
 								<span class="date">OFiDCrypt Services</span>
 								<h1>Our <br />Mission</h1>
-								<p>Our mission is to be the leading identity and movement accelerating mainstream Web3 adoption, unifying people and
+								<p>To be the leading identity and movement accelerating mainstream Web3 adoption, unifying people and
 									applications through a simple digital wallet hub and partner platforms. We empower peer-to-peer swaps, protection
 									and earning of assets, envisioning a self-sustaining autonomous ecosystem, guided by the people.</p>
 
-								<p><b>You can get started with a free wallet, buy Solana and swap for e𝕏PB in minutes! See this <a href="#">video guide</a>
-									for help.</b> For technical information about the OFiDCrypt & e𝕏P ecosystem project, click below.</p>
+								<p>Click below for the <b>OFiDCrypt & e𝕏P Web3™ Ecosystem</b> Project's Technical Information.</p>
 
-									<div class="image button-image">
-										<a href="/docs/docs.html" target="_blank">
-											<img src="../assets/images/button-see-the-docs.png" alt="Login Button Image for Code Wallet" />
-										</a>
-									</div>
+								<div class="image button-image">
+									<a href="/docs/docs.html" target="_blank">
+										<img src="../assets/images/button-see-the-docs.png" alt="Login Button Image for Code Wallet" />
+									</a>
+								</div>
 
-									<p>We recommend reviewing our <a href="/index.html#Guide">Quick Start Guide</a> to learn about Solana.</p>
-								</header>
+								<p>Get started with a <b>Wallet App</b> to buy <b>Solana</b> and <b>Swap for e𝕏PB</b> in minutes! See this <a href="#">video guide</a>
+									to find out how.</p>
+
+								<p>We recommend reviewing our <a href="/index.html#Guide">Quick Start Guide</a> to learn about Solana.</p>
+							</header>
 					
 						<!-- Quick Start Section -->
 						<section class="quick-start-section">
