--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -35,7 +35,7 @@
 		</script>
 
 	<!-- Meta Description (for SEO) -->
-	<title>Livestream Crypto Events | OFiDCrypt</title>
+	<title>Livestream Events | OFiDCrypt</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<meta name="description" content="Participate in OFiDCrypt live events to join discussions or celebrate creators in fun and interactive ways! Use your wallet and crypto to earn tips, tip others, or explore features of more partner services.">
@@ -43,7 +43,7 @@
 	<meta name="author" content="Tokin ⬢">
 
 	<!-- Open Graph Meta Tags -->
-	<meta property="og:title" content="Livestream Crypto Events | OFiDCrypt">
+	<meta property="og:title" content="Livestream Events | OFiDCrypt">
 	<meta property="og:description" content="Participate in OFiDCrypt live events to join discussions or celebrate creators in fun and interactive ways! Use your wallet and crypto to earn tips, tip others, or explore features of more partner services.">
 	<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-livestream-lowres.webp">
 	<meta property="og:url" content="https://www.ofidcrypt.com/pages/livestream">
@@ -51,7 +51,7 @@
 
 	<!-- Twitter Card Meta Tags -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="Livestream Crypto Events | OFiDCrypt">
+	<meta name="twitter:title" content="Livestream Events | OFiDCrypt">
 	<meta name="twitter:description" content="Participate in OFiDCrypt live events to join discussions or celebrate creators in fun and interactive ways! Use your wallet and crypto to earn tips, tip others, or explore features of more partner services.">
 	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-livestream-lowres.webp">
 	<meta name="twitter:url" content="https://www.ofidcrypt.com/pages/livestream">
@@ -106,7 +106,7 @@
 			<ul class="links">
 				<li><a href="../index.html">Home</a></li>
 				<li><a href="../community.html">Community</a></li>
-				<li class="active"><a href="livestream.html">Live Events</a></li>
+				<li class="active"><a href="livestream.html">Livestream</a></li>
 				<li><a href="affiliate.html">Partners</a></li>
 				<li><a href="vipwithcode.html">Code Lounge</a></li>
 				<li><a href="about.html">About Us</a></li>
@@ -180,7 +180,7 @@
 							<p class="align-center">ℹ️ <a href="https://x.com/i/broadcasts/1ZkJzRZMWvNJv">Aired on 𝕏 Jan-29-2025, 3:00 PM PST</a></p>
 							<p class="align-center">
 								<b>First time visiting?</b> Jump to the 
-								<a href="#about-contests">About Live Events</a> 
+								<a href="#about-contests">About Livestream Events</a> 
 								section to learn more about how to participate.
 							</p>
 							<p class="align-center">All date and time formats are YYYY-MMM-DD and are in the <b>Pacific Time Zone (PST)</b>
@@ -392,7 +392,7 @@
 					<ul>
 						<li><a href="affiliate.html">Affiliate</a></li>
 						<li><a href="../community.html">Community</a></li>
-						<li><a href="../docs/docs.html">Docs</a></li>
+						<li><a href="../docs/main.html">Docs</a></li>
 						<li><a href="about.html">About</a></li>
 					</ul>
 					<ul>
