--- a/community.html
+++ b/community.html
@@ -104,7 +104,7 @@
 			<ul class="links">
 				<li><a href="index.html">Home</a></li>
 				<li class="active"><a href="community.html">Community</a></li>
-				<li><a href="pages/livestream.html">Live Events</a></li>
+				<li><a href="pages/livestream.html">Livestream</a></li>
 				<li><a href="pages/affiliate.html">Partners</a></li>
 				<li><a href="pages/vipwithcode.html">Code Lounge</a></li>
 				<li><a href="pages/about.html">About Us</a></li>
@@ -435,7 +435,7 @@
 			<ul>
 				<li><a href="/pages/affiliate.html">Affiliate</a></li>
 				<li><a href="/community.html">Community</a></li>
-				<li><a href="/docs/docs.html">Docs</a></li>
+				<li><a href="/docs/main.html">Docs</a></li>
 				<li><a href="/pages/about.html">About</a></li>
 			</ul>
 			<ul>
