--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="/index.html#expb-get">e𝕏P Web3™</a></li>
 							<li><a href="/community.html">Community</a></li>
-							<li><a href="pages/livestream.html">Live Events</a></li>
+							<li><a href="pages/livestream.html">Livestream</a></li>
 							<li><a href="#">The OFiD Kid</a></li>
 							<li><a href="pages/about.html">About Us</a></li>
 						</ul>
@@ -189,7 +189,7 @@
 								<p><b>OFiDCrypt & e𝕏P Web3™ Ecosystem</b></p>
 
 								<div class="image button-image">
-									<a href="/docs/docs.html" target="_blank">
+									<a href="/docs/main.html" target="_blank">
 										<img src="../assets/images/button-see-the-docs.png" alt="Login Button Image for Code Wallet" />
 									</a>
 								</div>
@@ -441,7 +441,7 @@
 				<div id="copyright">
 				<ul><li><a href="/pages/affiliate.html">Affiliate</a></li>
 					<li><a href="/community.html">Community</a></li>
-					<li><a href="/docs/docs.html">Docs</a></li>
+					<li><a href="/docs/main.html">Docs</a></li>
 					<li><a href="/pages/about.html">About</a></li>
 				</ul>
 					<ul><li>&copy; OF<span class="i">i</span>DCrypt e𝕏P Web3™ 2025</li></ul>
