--- a/pages/affiliate.html
+++ b/pages/affiliate.html
@@ -105,7 +105,7 @@
 						<ul class="links">
 							<li><a href="../index.html">Home</a></li>
 							<li><a href="../community.html">Community</a></li>
-							<li><a href="livestream.html">Live Events</a></li>
+							<li><a href="livestream.html">Livestream</a></li>
 							<li class="active"><a href="affiliate.html">Partners</a></li>
 							<li><a href="vipwithcode.html">Code Lounge</a></li>
 							<li><a href="about.html">About Us</a></li>
@@ -280,7 +280,7 @@
 				<div id="copyright">
 					<ul><li><a href="affiliate.html">Affiliate</a></li>
 						<li><a href="../community.html">Community</a></li>
-						<li><a href="../docs/docs.html">Docs</a></li>
+						<li><a href="../docs/main.html">Docs</a></li>
 						<li><a href="about.html">About</a></li></ul>
 					<ul><li>&copy; OF<span class="i">i</span>DCrypt e𝕏P Web3™ 2025</li></ul>
 					<ul><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
