--- a/pages/vipwithcode.html
+++ b/pages/vipwithcode.html
@@ -299,7 +299,7 @@
 				<div id="copyright">
 					<ul><li><a href="affiliate.html">Affiliate</a></li>
 						<li><a href="../community.html">Community</a></li>
-						<li><a href="../docs/docs.html">Docs</a></li>
+						<li><a href="../docs/main.html">Docs</a></li>
 						<li><a href="about.html">About</a></li></ul>
 					<ul><li>&copy; OF<span class="i">i</span>DCrypt e𝕏P Web3™ 2025</li></ul>
 					<ul><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
