Added and configured explore.html.

--- a/cashlinks.html
+++ b/cashlinks.html
@@ -200,7 +200,7 @@
 			<footer id="footer">
 				<section>
 					<form method="post" action="https://formspree.io/f/mzzbzojq" onsubmit="return verifyRecaptcha()">
-						<h2 class="centered-heading">Suggest New Features</h2>
+						<h2 class="centered-heading">Enter Promotion</h2>
 						<div class="fields">
 							<div class="field">
 								<label for="name">Name</label>
@@ -211,7 +211,7 @@
 								<input type="email" name="email" id="email" required>
 							</div>
 							<div class="field">
-								<label for="message">Message</label>
+								<label for="message">Promo Code & Message</label>
 								<textarea name="message" id="message" rows="3" required></textarea>
 							</div>
 						</div>
