--- a/pages/vipwithcode.html
+++ b/pages/vipwithcode.html
@@ -104,8 +104,8 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="../index.html">Home</a></li>
-							<li><a href="#">e𝕏P Web3™</a></li>
-							<li class="active"><a href="vipwithcode.html">Code Lounge</a></li>
+							<li><a href="../explore.html">e𝕏P Web3™</a></li>
+							<li class="active"><a href="vipwithcode.html">Code Wallet</a></li>
 						</ul>
 						<ul class="icons">
 							<li>
@@ -142,7 +142,7 @@
 							<header class="major">
 								<span class="date">Exclusive Content</span>
 								<h1>Code Wallet<br />
-									Lounge</h1>
+									By Code Inc.</h1>
 								<p>The Lounge encourages members to try a new web3 experience through a community partner app by Code Inc. Gain access
 									to features such as claimable cash links, live events and more. Explore by clicking the "Go to Cashlinks" button at the <a href="#get-ahead-section">end of the page</a>
 								</p>
