--- a/community.html
+++ b/community.html
@@ -102,11 +102,11 @@
 		<!-- Nav -->
 		<nav id="nav">
 			<ul class="links">
-				<li><a href="index.html">Home</a></li>
+				<li ><a href="index.html">Home</a></li>
+				<li><a href="explore.html">e𝕏P Web3™</a></li>
 				<li class="active"><a href="community.html">Community</a></li>
 				<li><a href="pages/livestream.html">Livestream</a></li>
-				<li><a href="pages/affiliate.html">Partners</a></li>
-				<li><a href="pages/vipwithcode.html">Code Lounge</a></li>
+				<li><a href="#">The OFiD Kid</a></li>
 				<li><a href="pages/about.html">About Us</a></li>
 			</ul>
 			<ul class="icons">
