--- a/pages/affiliate.html
+++ b/pages/affiliate.html
@@ -104,11 +104,8 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="../index.html">Home</a></li>
-							<li><a href="../community.html">Community</a></li>
-							<li><a href="livestream.html">Livestream</a></li>
+							<li><a href="../explore.html">e𝕏P Web3™</a></li>
 							<li class="active"><a href="affiliate.html">Partners</a></li>
-							<li><a href="vipwithcode.html">Code Lounge</a></li>
-							<li><a href="about.html">About Us</a></li>
 						</ul>
 						<ul class="icons">
 							<li>
