--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -105,10 +105,10 @@
 		<nav id="nav">
 			<ul class="links">
 				<li><a href="../index.html">Home</a></li>
+				<li><a href="../explore.html">e𝕏P Web3™</a></li>
 				<li><a href="../community.html">Community</a></li>
 				<li class="active"><a href="livestream.html">Livestream</a></li>
-				<li><a href="affiliate.html">Partners</a></li>
-				<li><a href="vipwithcode.html">Code Lounge</a></li>
+				<li><a href="#">The OFiD Kid</a></li>
 				<li><a href="about.html">About Us</a></li>
 			</ul>
 			<ul class="icons">
