Added the OFiD Kid page ofidkid.html.

--- a/pages/about.html
+++ b/pages/about.html
@@ -111,7 +111,7 @@
 				<li><a href="../explore.html">e𝕏P Web3™</a></li>
 				<li><a href="../community.html">Community</a></li>
 				<li><a href="livestream.html">Livestream</a></li>
-				<li><a href="#">The OFiD Kid</a></li>
+				<li><a href="../ofidkid.html">The OFiD Kid</a></li>
 				<li class="active"><a href="about.html">About Us</a></li>
 			</ul>
 			<ul class="icons">
@@ -164,6 +164,8 @@
 				<article class="product-section">
 					<div class="product-wrapper">
 						<div class="product-content">
+
+							<!-- Section  - Left Image -->
 							<a href="https://www.ofidcrypt.ca/">
 								<span class="image left"><img src="../assets/images/ofid-exp-bg-01.png"
 										alt="Hvr App Colorful Logo"></span>
@@ -177,10 +179,13 @@
 								Bitcoin adoption has seen
 								substantial growth, with over 41 million BTC addresses holding at least $1 worth of
 								Bitcoin<a href="https://www.tastycrypto.com/blog/bitcoin-adoption/">2</a>.</p>
-							<a href="../docs/main.html">
+							
+								<!-- Section 2 - Right Image -->
+								<a href="../docs/main.html">
 								<span class="image right"><img src="../assets/images/webp/bg-docs-lowres.webp"
 										alt="Docs Image Tile"></span>
-							</a> <!-- Closed the anchor tag here -->
+								</a>
+
 							<p>By partnering with leading Web3 software developers, our company can subtly introduce people to the
 								nuances of
 								blockchain technology. Through everyday applications that integrate this advanced technology, users can
