--- a/cashlinks.html
+++ b/cashlinks.html
@@ -102,10 +102,10 @@
 			<nav id="nav">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="/community.html">Community</a></li>
+					<li><a href="explore.html">e𝕏P Web3™</a></li>
+					<li><a href="community.html">Community</a></li>
 					<li><a href="pages/livestream.html">Livestream</a></li>
-					<li><a href="pages/affiliate.html">Partners</a></li>
-					<li><a href="pages/vipwithcode.html">Code Lounge</a></li>
+					<li><a href="ofidkid.html">The OFiD Kid</a></li>
 					<li><a href="pages/about.html">About Us</a></li>
 				</ul>
 
