--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 							<li><a href="explore.html">e𝕏P Web3™</a></li>
 							<li><a href="community.html">Community</a></li>
 							<li><a href="pages/livestream.html">Livestream</a></li>
-							<li><a href="#">The OFiD Kid</a></li>
+							<li><a href="ofidkid.html">The OFiD Kid</a></li>
 							<li><a href="pages/about.html">About Us</a></li>
 						</ul>
 						<ul class="icons">
