--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -108,7 +108,7 @@
 				<li><a href="../explore.html">e𝕏P Web3™</a></li>
 				<li><a href="../community.html">Community</a></li>
 				<li class="active"><a href="livestream.html">Livestream</a></li>
-				<li><a href="#">The OFiD Kid</a></li>
+				<li><a href="../ofidkid.html">The OFiD Kid</a></li>
 				<li><a href="about.html">About Us</a></li>
 			</ul>
 			<ul class="icons">
