Updated site map. Created new OFiD community space and placed Kin in Partners. Lots of re-arranging for about, affiliate plus name chanes and spacing.

--- a/explore.html
+++ b/explore.html
@@ -400,7 +400,7 @@
 
 				<!-- Copyright -->
 				<div id="copyright">
-				<ul><li><a href="/pages/affiliate.html">Affiliate</a></li>
+				<ul><li><a href="/pages/affiliate.html">Partners</a></li>
 					<li><a href="/community.html">Community</a></li>
 					<li><a href="/docs/main.html">Docs</a></li>
 					<li><a href="/pages/about.html">About</a></li>
