--- a/index.html
+++ b/index.html
@@ -185,8 +185,6 @@
 									applications through a simple digital wallet hub and partner platforms. We empower peer-to-peer swaps,
 									protection
 									and earning of assets, envisioning a self-sustaining autonomous ecosystem, guided by the people.</p>
-									
-								<p><b>OFiDCrypt & e𝕏P Web3™ Ecosystem</b></p>
 
 								<div class="image button-image">
 									<a href="/docs/main.html" target="_blank">
@@ -439,7 +437,7 @@
 
 				<!-- Copyright -->
 				<div id="copyright">
-				<ul><li><a href="/pages/affiliate.html">Affiliate</a></li>
+				<ul><li><a href="/pages/affiliate.html">Partners</a></li>
 					<li><a href="/community.html">Community</a></li>
 					<li><a href="/docs/main.html">Docs</a></li>
 					<li><a href="/pages/about.html">About</a></li>
