--- a/pages/affiliate.html
+++ b/pages/affiliate.html
@@ -106,6 +106,7 @@
 							<li><a href="../index.html">Home</a></li>
 							<li><a href="../explore.html">e𝕏P Web3™</a></li>
 							<li class="active"><a href="affiliate.html">Partners</a></li>
+							<li><a href="../kincommunity.html">Kin Community</a></li>
 						</ul>
 						<ul class="icons">
 							<li>
@@ -149,12 +150,10 @@
                 <section class="partner-section">
                     <header>
                         <!-- Partner Name -->
-						<h2>e𝕏P Web3™</h2>
-						<p>Affiliate partnerships allow members to discover products organically from trusted sources such as blogs, social
-							media, and videos. These partners share genuine insights, building trust and enhancing the web3 experience.
-							We can simplify decision-making with valuable information, aligning with modern consumer
-							behavior that values peer recommendations. This approach provides personalized marketing tailored to customer
-							interests, making their browsing experience more enjoyable and satisfying.</p>
+						<p style="text-align: center;">We choose a varied range of products based on different marketing styles. Our members can
+							discover products organically from trusted sources such as blogs, social media, and videos. These partners share
+							genuine insights, building trust and enhancing the web3 experience.</p>
+
                     </header>
 
                     <!-- Product 1 -->
@@ -176,7 +175,7 @@
                     <article class="product-section">
                         <div class="product-wrapper">
                             <div class="product-content">
-								<a href="../community.html">
+								<a href="../kincommunity.html">
                                 	<span class="image right"><img src="../assets/images/logokin02.jpg" alt="Kin On Solana Logo Image"></span>
 								</a>
                                 <h3 style="text-align: right;">The Kin Community</h3>
@@ -191,14 +190,28 @@
                         </div>
                     </article>
 
+					<!-- Product 3 -->
+					<article class="product-section">
+						<div class="product-wrapper">
+							<div class="product-content">
+								<a href="vipwithcode.html">
+									<span class="image left"><img src="../assets/images/logocode01.jpg" alt="Code Wallet Logo"></span>
+								</a>
+								<h3 style="text-align: left;">Code Wallet | Take Control of Your Money</h3>
+								<p>Code Wallet is a community partner developing applications with Kin. Code Inc's Code SDK is open source, allowing
+									third-party developers to integrate Kin and micropayments into their software. Code Inc is one of two companies
+									under the same owner working on Kin-related apps.</p>
+							</div>
+						</div>
+					</article>
+
                     <!-- More About Our Partners -->
                     <footer>
 							<h2 style="text-align: center;">More About Our Partners</h2>
-							<p style="text-align: center;">OFiDCrypt works with only the best, to ensure a seamless experience for our users as they embark upon their crypto journey. 
-							We transcend the traditional affiliate model by cultivating other deep, collaborative relationships with our
-							<a href="../community.html">Community Connections</a></p>
-						</footer>
-                    </footer>
+							<p style="text-align: center;">OFiDCrypt works with a blend of community and sponsored partnerships. We are pleased to
+								offer you a variety of services and social spaces, providing the opportunity to experience web3 at its fullest. You
+								can visit <a href="../community.html">Our Community</a> to get started and see where the journey takes you!</p>
+					</footer>
                 </section>
             </section>
         </div>
@@ -275,7 +288,7 @@
 
 				<!-- Copyright -->
 				<div id="copyright">
-					<ul><li><a href="affiliate.html">Affiliate</a></li>
+					<ul><li><a href="affiliate.html">Partners</a></li>
 						<li><a href="../community.html">Community</a></li>
 						<li><a href="../docs/main.html">Docs</a></li>
 						<li><a href="about.html">About</a></li></ul>
