--- a/cashlinks.html
+++ b/cashlinks.html
@@ -265,7 +265,7 @@
 			<!-- Copyright -->
 			<div id="copyright">
 				<ul>
-					<li><a href="/pages/affiliate.html">Affiliate</a></li>
+					<li><a href="/pages/affiliate.html">Partners</a></li>
 					<li><a href="/community.html">Community</a></li>
 					<li><a href="/docs/main.html">Docs</a></li>
 					<li><a href="/pages/about.html">About</a></li>
