--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -390,7 +390,7 @@
 				<!-- Copyright -->
 				<div id="copyright">
 					<ul>
-						<li><a href="affiliate.html">Affiliate</a></li>
+						<li><a href="affiliate.html">Partners</a></li>
 						<li><a href="../community.html">Community</a></li>
 						<li><a href="../docs/main.html">Docs</a></li>
 						<li><a href="about.html">About</a></li>
