--- a/pages/vipwithcode.html
+++ b/pages/vipwithcode.html
@@ -295,7 +295,7 @@
 
 				<!-- Copyright -->
 				<div id="copyright">
-					<ul><li><a href="affiliate.html">Affiliate</a></li>
+					<ul><li><a href="affiliate.html">Partners</a></li>
 						<li><a href="../community.html">Community</a></li>
 						<li><a href="../docs/main.html">Docs</a></li>
 						<li><a href="about.html">About</a></li></ul>
